name:                language-server
version:             0.1.0.0
synopsis:            Implementation of the language-server protocol in Haskell.
homepage:            https://github.com/j-mueller/language-server#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Mueller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Mueller
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LanguageServer
  build-depends:       base >= 4.7 && < 5,
                       json-rpc-server
  default-language:    Haskell2010

executable language-server-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , language-server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/j-mueller/language-server
